<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <!-- RelativeLayout, LinearLayout e ConstraintLayout -->
    <!-- CordinatorLayout, FrameLayout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ivCreditcardBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/value_sixteen_dp"
            android:layout_marginStart="@dimen/value_sixteen_dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/ic_keyboard_arrow_left_24px" />

        <TextView
            android:id="@+id/tvCreditCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_credit_card"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/value_thirty_sp"
            android:layout_marginTop="@dimen/value_thirty_sp"
            android:layout_marginStart="@dimen/value_twenty_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCreditcardBack"
            app:layout_constraintBottom_toTopOf="@+id/tilCreditCardNumber"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreditCardNumber"
            style="@style/TextInputLayoutDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/credit_card_number"
            app:helperText="@string/credit_card_number_helper"
            android:layout_marginTop="39dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCreditCardTitle"
            app:layout_constraintBottom_toTopOf="@+id/tilCreditCardName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCreditCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextDefault"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreditCardName"
            style="@style/TextInputLayoutDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/credit_card_name"
            android:layout_marginTop="39dp"
            app:layout_constraintEnd_toEndOf="@+id/tilCreditCardNumber"
            app:layout_constraintStart_toStartOf="@+id/tilCreditCardNumber"
            app:layout_constraintTop_toBottomOf="@+id/tilCreditCardNumber"
            app:layout_constraintBottom_toTopOf="@+id/tilCreditCardExpiration">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextDefault"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreditCardExpiration"
            style="@style/TextInputLayoutDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_thirty_nine_dp"
            android:layout_marginEnd="@dimen/value_twenty_dp"
            android:hint="@string/credit_card_expiration"
            app:layout_constraintEnd_toStartOf="@+id/tilCreditCardCvv"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/tilCreditCardName"
            app:layout_constraintTop_toBottomOf="@+id/tilCreditCardName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCreditCardExpiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextDefault"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCreditCardCvv"
            style="@style/TextInputLayoutDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/credit_card_cvv"
            app:layout_constraintEnd_toEndOf="@+id/tilCreditCardName"
            app:layout_constraintStart_toEndOf="@+id/tilCreditCardExpiration"
            app:layout_constraintTop_toTopOf="@+id/tilCreditCardExpiration">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCreditCardCvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextDefault"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btCreditCardSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/value_twelve_dp"
            android:text="@string/credit_card_save"
            style="@style/ButtonDefault"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>